--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,27 +1,94 @@
 <!--index.wxml-->
-<scroll-view class="scrollarea" scroll-y type="list">
-  <view class="container">
-    <view class="userinfo">
-      <block wx:if="{{canIUseNicknameComp && !hasUserInfo}}">
-        <button class="avatar-wrapper" open-type="chooseAvatar" bind:chooseavatar="onChooseAvatar">
-          <image class="avatar" src="{{userInfo.avatarUrl}}"></image>
-        </button>
-        <view class="nickname-wrapper">
-          <text class="nickname-label">昵称</text>
-          <input type="nickname" class="nickname-input" placeholder="请输入昵称" bind:change="onInputChange" />
-        </view>
+<view>
+  <!-- 导航栏：APP-PLUS特定代码删除，微信小程序中使用view替代 -->
+  <view class="index">
+    <view class="index-title">
+      <image src="{{commonImg('dingwei.png')}}" class="index-title-icon"></image>
+      <text class="index-title-txt">{{ address }}</text>
+      <image src="{{commonImg('downarrow.png')}}" class="index-title-addressicon"></image>
+    </view>
+
+    <!-- 搜索框 -->
+    <view bindtap="onClickGotoSearchPage" class="index-input">
+      <view class="index-input-wrap">
+        <image src="{{commonImg('search.png')}}" class="index-input-wrap-icon"></image>
+        <text class="index-input-wrap-txt">搜搜你喜欢的店</text>
+      </view>
+    </view>
+
+    <!-- 轮播图 -->
+    <swiper indicator-dots="{{true}}" autoplay="{{true}}" circular indicator-color="{{indicatorColor}}" indicator-active-color="{{indicatorActiveColor}}">
+      <block wx:for="{{swiperData}}" wx:key="id">
+        <swiper-item>
+          <image mode="aspectFill" src="{{commonImg(item.image_url)}}" class="index-swiper-content-item-img"></image>
+        </swiper-item>
       </block>
-      <block wx:elif="{{!hasUserInfo}}">
-        <button wx:if="{{canIUseGetUserProfile}}" bindtap="getUserProfile"> 获取头像昵称 </button>
-        <view wx:else> 请使用2.10.4及以上版本基础库 </view>
+    </swiper>
+
+    <!-- 导航轮播图 -->
+    <swiper indicator-dots="{{true}}" autoplay="{{false}}" indicator-color="{{indicatorNavColor}}" indicator-active-color="{{indicatorActiveNavColor}}">
+      <block wx:for="{{pages}}" wx:key="index">
+        <swiper-item>
+          <view class="index-swipernav-content-item">
+            <block wx:for="{{page}}" wx:key="id">
+              <view bindtap="onClickGotoSearchResult" class="index-swipernav-content-item-itemdetail">
+                <image src="{{commonImg(item.imageUrl)}}" class="index-swipernav-content-item-itemdetail-img"></image>
+                <text class="index-swipernav-content-item-itemdetail-txt">{{ item.name }}</text>
+              </view>
+            </block>
+          </view>
+        </swiper-item>
       </block>
-      <block wx:else>
-        <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-        <text class="userinfo-nickname">{{userInfo.nickName}}</text>
+    </swiper>
+
+    <!-- 广告 -->
+    <view class="index-banner">
+      <block wx:for="{{adData}}" wx:key="id">
+        <image mode="aspectFill" class="index-banner-img" src="{{commonImg(item.image_url)}}"></image>
       </block>
     </view>
-    <view class="usermotto">
-      <text class="user-motto">{{motto}}</text>
+
+    <!-- 排序选择 -->
+    <view class="index-select">
+      <view bindtap="onClickSelectIndex" class="index-select-item" data-index="2" wx:class="{{ selectIndex === 2 ? 'index-select-item-active' : '' }}">
+        距离排序
+      </view>
+    </view>
+
+    <!-- 商店列表 -->
+    <view class="index-list">
+      <view wx:for="{{store_list}}" wx:key="id" class="index-list-item">
+        <image mode="aspectFill" src="{{commonImg(item.store.coverImage)}}" class="index-list-item-img"></image>
+        <view class="index-list-item-info">
+          <view class="index-list-item-info-name">
+            <text class="index-list-item-info-name-txt">{{ item.store.storeName }}</text>
+            <text class="index-list-item-info-name-jl">{{ item.store.jlresult }}km</text>
+          </view>
+          <view class="index-list-item-info-discount">
+            <view class="index-list-item-info-discount-item">
+              <text class="index-list-item-info-discount-item-viplefttxt">PLUS会员{{ item.store.vip2 }}折</text>
+            </view>
+            <view class="index-list-item-info-discount-item">
+              <text class="index-list-item-info-discount-item-huiyuanlefttxt">会员{{ item.store.vip1 }}折</text>
+            </view>
+          </view>
+          <view wx:if="{{item.tagList && item.tagList.length}}" class="index-list-item-info-list">
+            <block wx:for="{{item.tagList}}" wx:key="id">
+              <view class="index-list-item-info-list-item">
+                <text class="index-list-item-info-list-item-content">{{ item.content }}</text>
+              </view>
+            </block>
+          </view>
+        </view>
+      </view>
+    </view>
+
+    <!-- 扫码结账按钮 -->
+    <view class="index-btn savepadding">
+      <button bindtap="onClickscanCode" class="index-btn-btn">
+        <image src="{{commonImg('saoma.png')}}" class="index-btn-btn-img"></image>
+        <text class="index-btn-btn-txt">扫码结账</text>
+      </button>
     </view>
   </view>
-</scroll-view>
+</view>
