--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,62 +1,276 @@
 /**index.wxss**/
-page {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-.scrollarea {
-  flex: 1;
-  overflow-y: hidden;
+.index {
+  width: 100%;
 }
 
-.userinfo {
+.index-title {
+  width: 100%;
+  height: 44px;
+  line-height: 44px;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  padding-left: 34rpx;
+  position: fixed;
+  background-color: #fff;
+  z-index: 1;
+}
+
+.index-title-icon {
+  width: 26rpx;
+  height: 32rpx;
+  margin-right: 16rpx;
+}
+
+.index-title-txt {
+  font-size: 30rpx;
+  font-weight: 400;
+  line-height: 42rpx;
+  margin-right: 12rpx;
+  color: #636363;
+}
+
+.index-title-addressicon {
+  width: 16rpx;
+  height: 10rpx;
+}
+
+.index-input {
+  width: 100%;
+  height: 64rpx;
+  height: 152rpx;
+  padding-top: 44px;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  padding-left: 30rpx;
+  padding-right: 30rpx;
+}
+
+.index-input-wrap {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f8f8f8;
+  border-radius: 8rpx;
+}
+
+.index-input-wrap-icon {
+  width: 34rpx;
+  height: 34rpx;
+  margin-right: 8rpx;
+}
+
+.index-input-wrap-txt {
+  font-size: 28rpx;
+  color: #676767;
+  line-height: 28rpx;
+  font-weight: 400;
+}
+
+.index-swiper {
+  width: 100%;
+  height: 270rpx;
+  margin-top: 12rpx;
+  box-sizing: border-box;
+  padding-left: 30rpx;
+  padding-right: 30rpx;
+}
+
+.index-swiper-content {
+  width: 100%;
+  height: 270rpx;
+}
+
+.index-swiper-content uni-swiper {
+  height: 270rpx;
+}
+
+.index-swiper-content swiper {
+  height: 270rpx;
+}
+
+.index-swiper-content-item-img {
+  width: 100%;
+  height: 270rpx;
+  background-color: #eee;
+  border-radius: 20rpx;
+}
+
+.index-swiper-content{
+  right: 5%;
+  left: auto;
+  bottom: 20rpx;
+  display: flex;
+  align-items: center;
+}
+
+.index-swiper-content uni-swiper {
+  width: 4rpx;
+  height: 4rpx;
+}
+
+.index-swiper-content uni-swiper {
+  width: 12rpx;
+  height: 12rpx;
+}
+
+.index-swipernav {
+  width: 100%;
+  margin-top: 14rpx;
+  box-sizing: border-box;
+  padding-left: 44rpx;
+  padding-right: 44rpx;
+}
+
+.index-swipernav-content {
+  width: 100%;
+  height: 184rpx;
+}
+
+.index-swipernav-content uni-swiper {
+  height: 184rpx;
+}
+
+.index-swipernav-content swiper {
+  height: 184rpx;
+}
+
+.index-swipernav-content-item {
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+.index-swipernav-content-item-itemdetail {
+  width: 20%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #aaa;
-  width: 80%;
 }
 
-.userinfo-avatar {
-  overflow: hidden;
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
+.index-swipernav-content-item-itemdetail-img {
+  width: 94rpx;
+  height: 94rpx;
   border-radius: 50%;
+  margin-bottom: 16rpx;
 }
 
-.usermotto {
-  margin-top: 200px;
+.index-swipernav-content-item-itemdetail-txt {
+  font-size: 24rpx;
+  font-weight: 400;
+  line-height: 32rpx;
+  color: #333333;
 }
 
-.avatar-wrapper {
-  padding: 0;
-  width: 56px !important;
-  border-radius: 8px;
-  margin-top: 40px;
-  margin-bottom: 40px;
+.index-swipernav-content uni-swiper  {
+  width: 14rpx;
+  height: 8rpx;
+  border-radius: 4rpx;
 }
 
-.avatar {
-  display: block;
-  width: 56px;
-  height: 56px;
+.index-swipernav-content uni-swiper {
+  width: 28rpx;
+  height: 8rpx;
+  border-radius: 4rpx;
 }
 
-.nickname-wrapper {
-  display: flex;
+.index-banner {
   width: 100%;
-  padding: 16px;
+  height: 188rpx;
   box-sizing: border-box;
-  border-top: .5px solid rgba(0, 0, 0, 0.1);
-  border-bottom: .5px solid rgba(0, 0, 0, 0.1);
-  color: black;
+  padding-left: 44rpx;
+  padding-right: 44rpx;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
 }
 
-.nickname-label {
-  width: 105px;
+.index-banner-img {
+  width: 322rpx;
+  height: 168rpx;
 }
 
-.nickname-input {
-  flex: 1;
+.index-select {
+  width: 100%;
+  height: 72rpx;
+  box-sizing: border-box;
+  padding-left: 16rpx;
+  padding-right: 116rpx;
+  display: flex;
+  align-items: center;
+}
+
+.index-select-item {
+  width: 33.33%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 28rpx;
+  font-weight: 600;
+  color: #242424;
+  line-height: 72rpx;
+}
+
+.index-select-item-active {
+  color: #fd4d7d;
+  position: relative;
+}
+
+.index-select-item-active::after {
+  content: ' ';
+  position: absolute;
+  width: 60rpx;
+  height: 4rpx;
+  background-color: #f02230;
+  border-radius: 2rpx;
+  left: 50%;
+  bottom: 0;
+  margin-left: -30rpx;
+}
+
+.index-list {
+  width: 100%;
+  box-sizing: border-box;
+  padding-top: 16rpx;
+  padding-left: 16rpx;
+  padding-right: 14rpx;
+  background-color: #faf7fa;
+}
+
+.index-btn {
+  position: fixed;
+  left: 50%;
+  bottom: 57px;
+  margin-left: -213rpx;
+  width: 426rpx;
+  height: 76rpx;
+  border-radius: 38rpx;
+  line-height: 76rpx;
+}
+
+.index-btn-btn {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f02230;
+  border-radius: 38rpx;
+}
+
+.index-btn-btn-img {
+  width: 48rpx;
+  height: 48rpx;
+  margin-right: 18rpx;
+}
+
+.index-btn-btn-txt {
+  font-weight: 500;
+  font-size: 28rpx;
+  color: #fff;
 }
