--- a/pages/login/phone/pwd/index.wxml
+++ b/pages/login/phone/pwd/index.wxml
@@ -1,7 +1,7 @@
 <!--pages/login/phone/pwd/index.wxml-->
 <view class="login-box">
   <view class="login-box-top">
-    <image src="msjimg.png"></image>
+    <image src="/assets/images/login/msjimg.png"></image>
     <view class="login-box-top-text">折扣价结账</view>
   </view>
   <view class="login-box-center">
@@ -29,7 +29,7 @@
       <view class="login-box-bottom-title-xianr"></view>
     </view>
     <view class="login-box-bottom-party-login">
-      <image src="{{commonImg('wximg.png')}}"></image>
+      <image src="/assets/images/login/wximg.png"></image>
     </view>
     <view class="login-box-bottom-agreement">
       <view>注册即同意<text>《用户协议》</text>和<text>《隐私策略》</text></view>
