--- a/pages/merchant/apply/index/index.wxml
+++ b/pages/merchant/apply/index/index.wxml
@@ -1,77 +1,77 @@
-<!--pages/merchant/apply.wxml-->
+<!--pages/merchant/apply/index/index.wxml-->
 <view>
   <view class="merchant-submits-apply">
     <view class="merchant-submits-applys">
       <view class="merchant-submits-apply-top">
         <view class="title">会员编号</view>
-        <view class="number">{{ memberId }}</view>
+        <view class="number">{{memberId}}</view>
       </view>
+
       <view class="merchant-submits-apply-bottom">
         <view class="merchant-submits-apply-info">
           <text class="merchant-submits-apply-info-txt">商户名称</text>
           <view class="merchant-submits-apply-info-input">
-            <input v-model="merchantName" placeholder="请输入商户名称" class="merchant-submits-apply-info-input-input" placeholder-style="color:#CCCCCC" />
+            <input bindinput="onInputChange" data-field="merchantName" value="{{merchantName}}" placeholder="请输入商户名称" class="merchant-submits-apply-info-input-input" placeholder-style="color:#CCCCCC" />
           </view>
         </view>
+
         <view class="merchant-submits-apply-info">
           <text class="merchant-submits-apply-info-txt">联系人</text>
           <view class="merchant-submits-apply-info-input">
-            <input v-model="contract" placeholder="请输入联系人" class="merchant-submits-apply-info-input-input" placeholder-style="color:#CCCCCC" />
-            <view v-if="contract" bindtap="contract = ''" class="merchant-submits-apply-info-input-close">×</view>
+            <input bindinput="onInputChange" data-field="contract" value="{{contract}}" placeholder="请输入联系人" class="merchant-submits-apply-info-input-input" placeholder-style="color:#CCCCCC" />
           </view>
         </view>
+
         <view class="merchant-submits-apply-info">
           <text class="merchant-submits-apply-info-txt">联系电话</text>
           <view class="merchant-submits-apply-info-input">
-            <input v-model="phone" placeholder="请输入联系电话" class="merchant-submits-apply-info-input-input" placeholder-style="color:#CCCCCC" />
-            <view v-if="phone" bindtap="phone = ''" class="merchant-submits-apply-info-input-close">×</view>
+            <input bindinput="onInputChange" data-field="phone" value="{{phone}}" placeholder="请输入联系电话" class="merchant-submits-apply-info-input-input" placeholder-style="color:#CCCCCC" />
           </view>
         </view>
 
         <view class="merchant-submits-apply-info">
           <text class="merchant-submits-apply-info-txt">营业开始时间</text>
           <view class="merchant-submits-apply-info-input">
-            <picker mode="time" :value="businessHoursStart" change="bindStartTimeChange">
+            <picker mode="time" value="{{businessHoursStart}}" bindchange="bindStartTimeChange">
               <view class="uni-input">{{businessHoursStart}}</view>
             </picker>
           </view>
         </view>
+
         <view class="merchant-submits-apply-info">
           <text class="merchant-submits-apply-info-txt">营业结束时间</text>
           <view class="merchant-submits-apply-info-input">
-            <picker mode="time" :value="businessHoursEnd" change="bindEndTimeChange">
+            <picker mode="time" value="{{businessHoursEnd}}" bindchange="bindEndTimeChange">
               <view class="uni-input">{{businessHoursEnd}}</view>
             </picker>
           </view>
         </view>
-        <!-- <view class="merchant-submits-apply-city">
-          <text class="merchant-submits-apply-city-item-txt">省市区</text>
-          -->
-          <picker class="merchant-submits-apply-city" mode="region" bindchange="bindRegionChange" value="{{region}}">
+
+        <view class="merchant-submits-apply-info">
+          <text class="merchant-submits-apply-info-txt">省市区</text>
+          <picker mode="region" value="{{region}}" bindchange="bindRegionChange" class="merchant-submits-apply-city">
             <view class="merchant-submits-apply-city-item-border">
               {{region[0] || '请选择省'}} {{region[1] || '市'}} {{region[2] || '区'}}
             </view>
           </picker>
-       
-        <!-- </view> -->
+        </view>
 
         <view class="merchant-submits-apply-info">
-          <text class="merchant-submits-apply-info-txt">详细</text>
+          <text class="merchant-submits-apply-info-txt">详细地址</text>
           <view class="merchant-submits-apply-info-input">
-            <input v-model="address" placeholder="请输入详细地址" class="merchant-submits-apply-info-input-input" placeholder-style="color:#CCCCCC" />
-            <view v-if="address" bindtap="address = ''" class="merchant-submits-apply-info-input-close">×</view>
+            <input bindinput="onInputChange" data-field="address" value="{{address}}" placeholder="请输入详细地址" class="merchant-submits-apply-info-input-input" placeholder-style="color:#CCCCCC" />
           </view>
         </view>
 
         <view class="merchant-submits-apply-info">
           <text class="merchant-submits-apply-info-txt">品牌介绍</text>
           <view class="merchant-submits-apply-info-textarea">
-            <textarea v-model="recommendation" placeholder="品牌详细介绍" class="merchant-submits-apply-info-input-input" auto-height placeholder-style="color:#CCCCCC" />
-            <view v-if="recommendation" bindtap="recommendation = ''" class="merchant-submits-apply-info-input-close">×</view>
+            <textarea bindinput="onInputChange" data-field="recommendation" value="{{recommendation}}" placeholder="品牌详细介绍" class="merchant-submits-apply-info-input-input" placeholder-style="color:#CCCCCC" />
           </view>
         </view>
       </view>
     </view>
-    <view bindtap="onClickSubmitBtn" class="merchant-submits-apply-btn">提交入驻申请</view>
+
+    <view bindtap="apply" class="merchant-submits-apply-btn">提交入驻申请</view>
   </view>
 </view>
