--- a/pages/appraise/index/index.wxss
+++ b/pages/appraise/index/index.wxss
@@ -1,1 +1,97 @@
 /* pages/appraise/index/index.wxss */
+/* global styles for the page */
+page {
+  background-color: #F7F4F8;
+}
+
+.gotoappraise {
+  width: 100%;
+  box-sizing: border-box;
+  padding-top: 18rpx;
+  padding-left: 16rpx;
+  padding-right: 14rpx;
+}
+
+.gotoappraise-content {
+  background-color: #fff;
+  border-radius: 20rpx;
+  box-shadow: 0 4rpx 12rpx 0 rgba(0, 0, 0, 0.05);
+  width: 100%;
+  box-sizing: border-box;
+  padding-top: 36rpx;
+  padding-left: 34rpx;
+  padding-right: 20rpx;
+  padding-bottom: 28rpx;
+  display: flex;
+  flex-direction: column;
+}
+
+.gotoappraise-content-name {
+  font-size: 28rpx;
+  font-weight: 600;
+  color: rgba(0, 0, 0, 0.85);
+  line-height: 40rpx;
+}
+
+.gotoappraise-content-ddh {
+  font-size: 28rpx;
+  font-weight: 400;
+  color: rgba(0, 0, 0, 0.85);
+  line-height: 40rpx;
+}
+
+.gotoappraise-content-line {
+  width: 100%;
+  height: 2rpx;
+  background-color: #eee;
+  margin-top: 30rpx;
+}
+
+.gotoappraise-content-content {
+  width: 100%;
+  margin-top: 4rpx;
+  display: flex;
+  box-sizing: border-box;
+  padding-left: 18rpx;
+  padding-right: 24rpx;
+  flex-direction: column;
+}
+
+.gotoappraise-content-content-txt {
+  font-size: 28rpx;
+  font-weight: 400;
+  color: rgba(0, 0, 0, 0.85);
+  line-height: 40rpx;
+}
+
+.gotoappraise-content-content-content {
+  margin-top: 8rpx;
+  width: 100%;
+  min-height: 230rpx;
+  background-color: #F8F8F8;
+  border-radius: 12rpx;
+  font-size: 28rpx;
+  box-sizing: border-box;
+  padding: 20rpx;
+}
+
+.gotoappraise-btn {
+  margin-top: 18rpx;
+  width: 100%;
+  height: 82rpx;
+  box-sizing: border-box;
+  padding-left: 120rpx;
+  padding-right: 120rpx;
+}
+
+.gotoappraise-btn-wrap {
+  width: 100%;
+  height: 100%;
+  border-radius: 14rpx;
+  background-color: #F02230;
+  color: #fff;
+  font-size: 32rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
