--- a/pages/appraise/list/index.wxss
+++ b/pages/appraise/list/index.wxss
@@ -1,1 +1,80 @@
 /* pages/appraise/list/index.wxss */
+page {
+  background-color: #F6F6F6;
+}
+.appraise {
+  width: 100%;
+  box-sizing: border-box;
+  padding-top: 16rpx;
+  padding-left: 16rpx;
+  padding-right: 14rpx;
+  padding-bottom: 16rpx;
+}
+
+.appraise-list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.appraise-list-item {
+  width: 100%;
+  background-color: #fff;
+  box-sizing: border-box;
+  padding: 34rpx;
+  border-radius: 20rpx;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 16rpx;
+}
+
+.appraise-list-item:last-child {
+  margin-bottom: 0;
+}
+
+.appraise-list-item-name {
+  font-size: 28rpx;
+  line-height: 40rpx;
+  font-weight: 600;
+  color: rgba(0, 0, 0, 0.85);
+  margin-bottom: 18rpx;
+}
+
+.appraise-list-item-ordernum {
+  font-size: 28rpx;
+  font-weight: 400;
+  line-height: 40rpx;
+  margin-bottom: 18rpx;
+  font-weight: 400;
+  color: rgba(0, 0, 0, 0.85);
+}
+
+.appraise-list-item-content {
+  font-size: 28rpx;
+  font-weight: 400;
+  line-height: 40rpx;
+  font-weight: 400;
+  color: rgba(0, 0, 0, 0.85);
+}
+
+.noappraise {
+  width: 100%;
+  height: calc(100vh - 44px);
+  box-sizing: border-box;
+  padding-top: 386rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.noappraise-img {
+  width: 319rpx;
+  height: 273rpx;
+  margin-bottom: 47rpx;
+}
+
+.noappraise-txt {
+  font-size: 20rpx;
+  line-height: 25rpx;
+  color: #CFCFCF;
+}
