--- a/pages/feedback/index/index.wxss
+++ b/pages/feedback/index/index.wxss
@@ -1,1 +1,58 @@
-/* pages/feedback/index/index.wxss */
+.feedback {
+  padding: 16rpx 16rpx;
+  box-sizing: border-box;
+  padding-bottom: 120rpx;
+}
+
+.feedback-textarea {
+  width: 100%;
+  /* height:300rpx; */
+  height: auto !important;
+  _height: 200rpx;
+  min-height: 200rpx;
+  border-radius: 12rpx;
+  border: 2rpx solid rgb(221, 221, 221);
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+}
+
+.feedback-textarea-input {
+  padding: 0;
+  margin: 0;
+  outline: none;
+  border: none;
+  width: calc(100% - 60rpx);
+  height: 100%;
+  box-sizing: border-box;
+  padding-left: 22rpx;
+  font-size: 30rpx;
+  /* line-height: 80rpx; */
+
+}
+
+.feedback-textarea-input-close {
+  width: 30rpx;
+  height: 30rpx;
+  border-radius: 50%;
+  background-color: #C6C6C6;
+  line-height: 30rpx;
+  text-align: center;
+  color: #fff;
+  font-size: 28rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.feedback-submit {
+  width: 500rpx;
+  height: 82rpx;
+  background: rgba(240, 34, 48, 1);
+  border-radius: 14rpx;
+  color: #fff;
+  font-size: 32rpx;
+  text-align: center;
+  line-height: 82rpx;
+  margin: 40rpx auto 0 auto;
+}
