--- a/pages/findback/index.wxss
+++ b/pages/findback/index.wxss
@@ -1,1 +1,105 @@
-/* pages/findback/index.wxss */
+.retrieve-password {
+  padding: 72rpx 46rpx;
+  box-sizing: border-box;
+}
+
+.retrieve-password-ul {
+  border: 2rpx solid rgba(221, 221, 221, 1);
+  background: #fff;
+  border-bottom: 0rpx;
+}
+
+.retrieve-password-li {
+  padding: 0px 40rpx;
+  box-sizing: border-box;
+  height: 84rpx;
+  border-bottom: 2rpx solid rgba(221, 221, 221, 1);
+}
+
+.retrieve-password-li input {
+  font-size: 28rpx;
+  height: 84rpx;
+  line-height: 84rpx;
+  color: #333;
+}
+
+.retrieve-password-li-two {
+  padding: 0px 40rpx;
+  box-sizing: border-box;
+  height: 84rpx;
+  border-bottom: 2rpx solid rgba(221, 221, 221, 1);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.retrieve-password-li-two input {
+  font-size: 28rpx;
+  height: 84rpx;
+  line-height: 84rpx;
+  color: #333;
+  float: left;
+}
+
+.retrieve-password-li-two button {
+  font-size: 28rpx;
+  height: 80rpx;
+  line-height: 80rpx;
+
+  background: #fff;
+  float: right;
+  margin: 0rpx;
+  padding: 0rpx;
+  max-width: 200rpx;
+  font-weight: 400;
+  min-width: 100rpx;
+  text-align: center;
+}
+
+.blue {
+  color: #1677FF;
+}
+
+.red {
+  color: #F02230;
+}
+
+.retrieve-password-li-two button::after {
+  border: none;
+}
+
+.xian {
+  width: 2rpx;
+  height: 22rpx;
+  background: #979797;
+  margin-right: -70rpx;
+}
+
+.retrieve-password-btn {
+  width: 660rpx;
+  height: 100rpx;
+  background: rgba(0, 0, 0, 0.2);
+  border-radius: 50rpx;
+  border: 2rpx solid rgba(221, 221, 221, 1);
+  font-size: 28rpx;
+  line-height: 70rpx;
+  color: rgba(255, 255, 255, 1);
+  margin: 40rpx auto 26rpx;
+  border: none;
+}
+
+.retrieve-password-btn::after {
+  border: none
+}
+
+.retrieve-password-tip {
+  font-size: 24rpx;
+  height: 34rpx;
+  line-height: 34rpx;
+  text-align: center;
+  color: rgba(170, 170, 170, 1);
+}
+
+.writetel-submitbtn-active {
+  background-color: #F02230;
+}
