--- a/pages/modify/index.wxss
+++ b/pages/modify/index.wxss
@@ -1,1 +1,160 @@
-/* pages/modify/index.wxss */
+.modifydata {
+  width: 100%;
+  box-sizing: border-box;
+  padding-top: 14rpx;
+  padding-left: 16rpx;
+  padding-right: 14rpx;
+}
+
+.modifydata-wrap {
+  width: 100%;
+  background-color: #fff;
+  border-radius: 12rpx;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  padding-top: 32rpx;
+  padding-left: 38rpx;
+  padding-right: 26rpx;
+  padding-bottom: 38rpx;
+}
+
+.modifydata-wrap-tel {
+  display: flex;
+  width: 100%;
+  height: 72rpx;
+  align-items: center;
+  margin-bottom: 24rpx;
+}
+
+.modifydata-wrap-tel:last-child {
+  margin-bottom: 0;
+}
+
+.modifydata-wrap-tel-title {
+  width: 114rpx;
+  font-size: 30rpx;
+  font-weight: 600;
+}
+
+.modifydata-wrap-tel-tel {
+  padding: 0;
+  margin: 0;
+  outline: none;
+  border: none;
+  background-color: #fff;
+  width: 372rpx;
+  height: 100%;
+  border-radius: 12rpx;
+  box-sizing: border-box;
+  border: 2rpx solid rgba(221, 221, 221, 1);
+  display: flex;
+  align-items: center;
+  padding-left: 22rpx;
+  font-size: 30rpx;
+}
+
+.modifydata-wrap-tel-tel-txt {
+  border: none;
+  padding-left: 0;
+}
+
+.modifydata-wrap-tel-sendtxt {
+  font-size: 28rpx;
+  font-weight: 400;
+  line-height: 40rpx;
+  color: #1677FF;
+  margin-right: 0;
+  margin-left: auto;
+}
+
+.modifydata-wrap-tel-code {
+  flex: 1;
+  height: 100%;
+  border: 2rpx solid rgba(221, 221, 221, 1);
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  border-radius: 12rpx;
+}
+
+.modifydata-wrap-tel-code-input {
+  margin: 0;
+  outline: none;
+  border: none;
+  background-color: #fff;
+  flex: 1;
+  height: 100%;
+  box-sizing: border-box;
+  padding-left: 22rpx;
+}
+
+.modifydata-wrap-tel-code-close {
+  width: 30rpx;
+  height: 30rpx;
+  border-radius: 50%;
+  margin-right: 26rpx;
+}
+
+.modifydata-wrap-tel-code-input-date {
+  font-size: 30rpx;
+  line-height: 72rpx;
+}
+
+.modifydata-wrap-tel-code-input-nodate {
+  font-size: 30rpx;
+  line-height: 72rpx;
+  color: #CCCCCC;
+}
+
+.modifydata-wrap-tel-sex {
+  display: flex;
+  align-items: center;
+}
+
+.modifydata-wrap-tel-sex-item {
+  display: flex;
+  align-items: center;
+  margin-right: 74rpx;
+}
+
+.modifydata-wrap-tel-sex-item:last-child {
+  margin-right: 0;
+}
+
+.modifydata-wrap-tel-sex-item-img {
+  width: 33rpx;
+  height: 33rpx;
+  border-radius: 50%;
+  margin-right: 18rpx;
+}
+
+.modifydata-wrap-tel-sex-item-txt {
+  font-size: 30rpx;
+  color: #333333;
+  line-height: 42rpx;
+}
+
+.modifydata-savebtn {
+  width: 100%;
+  height: 82rpx;
+  box-sizing: border-box;
+  padding-left: 46rpx;
+  padding-right: 44rpx;
+  position: fixed;
+  left: 0;
+  bottom: 60rpx;
+}
+
+.modifydata-savebtn-btn {
+  width: 100%;
+  height: 100%;
+  border-radius: 14rpx;
+  background-color: #F02230;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 32rpx;
+  font-weight: 600;
+  color: #fff;
+}
