--- a/pages/pay/index.wxss
+++ b/pages/pay/index.wxss
@@ -1,1 +1,56 @@
-/* pages/pay/index.wxss */
+.paysuccess {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	box-sizing: border-box;
+	padding-top: 72rpx;
+}
+.paysuccess-img {
+	width: 88rpx;
+	height: 88rpx;
+	border-radius: 50%;
+}
+.paysuccess-statustxt {
+	margin-top: 32rpx;
+	font-weight: 500;
+	font-size: 40rpx;
+	line-height: 56rpx;
+	color: #000000;
+}
+.paysuccess-shopname {
+	font-size: 28rpx;
+	line-height: 40rpx;
+	font-weight: 400;
+	color: rgba(0, 0, 0, 0.85);
+}
+.paysuccess-pricetxt {
+	font-size: 28rpx;
+	line-height: 40rpx;
+	font-weight: 400;
+	color: rgba(0, 0, 0, 0.85);
+}
+.paysuccess-desc {
+	width: 650rpx;
+	height: 350rpx;
+	display: flex;
+	background-color: #d8d8d8;
+	border-radius: 12rpx;
+	flex-direction: column;
+	justify-content: center;
+}
+.paysuccess-desc-firsttxt {
+	font-size: 28rpx;
+	font-weight: 500;
+	line-height: 40rpx;
+	color: rgba(0, 0, 0, 0.85);
+	display: block;
+	margin-left: 206rpx;
+}
+.paysuccess-back {
+	font-size: 38rpx;
+	margin-top: 52rpx;
+	line-height: 50rpx;
+	color: rgba(0, 0, 0, 0.85);
+	font-weight: bold;
+}
