--- a/pages/login/phone/pwd/index.wxml
+++ b/pages/login/phone/pwd/index.wxml
@@ -29,7 +29,7 @@
       <view class="login-box-bottom-title-xianr"></view>
     </view>
     <view class="login-box-bottom-party-login">
-      <image src="/assets/images/login/wximg.png"></image>
+      <image bindtap="loginByWeChat" src="/assets/images/login/wximg.png"></image>
     </view>
     <view class="login-box-bottom-agreement">
       <view>注册即同意<text>《用户协议》</text>和<text>《隐私策略》</text></view>
